added alice to performances

--- a/performances.html
+++ b/performances.html
@@ -114,16 +114,27 @@
         <div class="row align-items-center">
           <div class="col-xl-6 col-md-6">
             <div class="about_thumb">
-              <img src="img/performances/midsummer.png" alt="" />
+              <img src="img/performances/alice2021.png" alt="" />
             </div>
           </div>
           <div class="col-xl-5 offset-xl-1 col-md-6">
             <div class="about_info">
               <div class="section_title">
-                <span class="sub_heading">Fall 2020</span>
-                <h3>A Midsummer Night’s Dream</h3>
+                <span class="sub_heading">Spring 2021</span>
+                <h3>Alice’s Adventures in Wonderland</h3>
                 <div class="seperator"></div>
               </div>
+              <div>
+                <p>
+                  Sign up
+                  <a
+                    href="https://forms.gle/nhUhua3uykzHFHFV7
+"
+                    >here</a
+                  >
+                </p>
+              </div>
+              <!--
               <div>
                 <p>
                   Columbia University Ballet Ensemble (CUBE) is pleased to
@@ -163,6 +174,7 @@
                   >Promo Video</a
                 >
               </div>
+              -->
             </div>
           </div>
         </div>
@@ -179,6 +191,23 @@
               <span class="sub_heading">Performances</span>
               <h3>Past Performances</h3>
               <div class="seperator"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row align-items-center mb-80">
+          <div class="col-xl-6 col-md-6">
+            <div class="single_project_thumb">
+              <img src="img/performances/midsummer.png" alt="" />
+            </div>
+          </div>
+          <div class="col-xl-5 offset-xl-1 col-md-6">
+            <div class="section_title">
+              <span class="sub_heading2">Fall 2020</span>
+              <h4>A Midsummer Night’s Dream</h4>
+              <a href="https://youtu.be/cHvrA4DTrQc" class="boxed-btn"
+                >View Promo Video</a
+              >
             </div>
           </div>
         </div>
