--- a/auditions.html
+++ b/auditions.html
@@ -128,12 +128,13 @@
           </div>
           <div class="col-xl-5 offset-xl-1 col-md-6">
             <div class="section_title">
-              <span class="sub_heading2">Fall 2020</span>
+              <span class="sub_heading2">Spring 2021</span>
               <h4>A Midsummer Night’s Dream</h4>
               <p>
                 Columbia University Ballet Ensemble (CUBE) will be holding
-                virtual auditions for our Fall 2020 virtual production of
-                <i><b>A Midsummer Night’s Dream</b></i
+                virtual auditions for our Spring 2021 virtual production of
+
+                <i><b>Alice’s Adventures in Wonderland.</b></i
                 >. The audition is open to all current Columbia University
                 affiliates. Audition instructions are below. Everyone who
                 auditions will be cast. Casting will be announced within a few
@@ -141,22 +142,23 @@
 
                 <br /><br />
                 Without access to studio space, we have adapted this virtual
-                production to be performed outdoors in sneakers, flat shoes, or
-                socks. There will be no pointe roles offered. To view an example
-                of what we expect our virtual production will look like, click
-                the YouTube link below:
-                <a href="https://youtu.be/nfuknmf9Ai4"
+                production to be performed outdoors in sneakers or flat shoes.
+                There will be no pointe roles offered for this semester. To view
+                an example of what we expect our virtual production will look
+                like, click the YouTube link below:
+                <a href="https://youtu.be/nfuknmf9Ai4 "
                   >https://youtu.be/nfuknmf9Ai4</a
                 >
 
                 <br /><br />
+
                 The virtual audition class will be on
-                <b>Saturday, September 12th from 3-4:30pm EDT</b>. This audition
+                <b> Sunday, January 17th from 1-2:30pm EDT</b>. This audition
                 class is <i>required</i> for those who have previous dance
-                experience but did not participate in CUBE for Spring 2020. It
-                is <i>optional</i> for those with no previous dance experience
-                or for those who participated in CUBE for Spring 2020. The class
-                will consist of a barre followed by a short center. Please wear
+                experience but did not participate in CUBE for Fall 2020. It is
+                <i>optional</i> for those with no previous dance experience or
+                for those who participated in CUBE for Fall 2020. The class will
+                consist of a barre followed by a short center. Please wear
                 comfortable dance clothing and ballet shoes. The Zoom link will
                 be sent to you upon completion of the Google form detailed
                 below.
@@ -173,30 +175,33 @@
                 All dancers interested in auditioning, whether they will be
                 attending the virtual audition class or not, must indicate their
                 interest via the Google form linked below by
-                <b>Friday, September 11th at 11:59pm EDT</b> to be considered
-                for casting:
-                <a href="https://forms.gle/wiFAfhPKCufYetb5A"
-                  >https://forms.gle/wiFAfhPKCufYetb5A</a
+                <b>Friday, January 16th at 11:59pm EDT</b> to be considered for
+                casting:
+                <a href="https://forms.gle/czrz9YJuH4iSHz389"
+                  >https://forms.gle/czrz9YJuH4iSHz389</a
                 >
 
                 <br /><br />
-                Please take note of the following filming weeks. During filming
-                weeks, you will be asked to film yourself performing
+                Please take note of the following filming blocks. During filming
+                blocks, you will be asked to film yourself performing
                 choreography taught during rehearsals and submit the video to a
-                videographer. We estimate that during these weeks, you will have
-                to commit one extra hour per week to film. <br />
-                1. October 5th-9th<br />
-                2. October 19th-23rd<br />
-                3. November 2nd-6th<br />
+                videographer. You may not be required to film for each filming
+                block.
+                <br />
+                1. Filming Block #1: Indoor Scenes: March 15th-21st
+                <br />
+                2. Filming Block #2: TBD: March 22nd-28th<br />
+                3. Filming Block #3: Garden Scenes: March 29th-April 15th
+                <br />
 
                 <br /><br />
-                Beginning on the week of September 14th, rehearsals will be 1-2
-                hours per week and will take place primarily on Wednesday
-                nights, Thursday nights, Saturdays, and Sundays, depending on
-                your casting and availability.
+                Beginning the week of January 23rd, rehearsals will be 1-3 hours
+                per week and will take place primarily on Wednesday nights,
+                Thursday nights, Saturdays, and Sundays, depending on your
+                casting and availability.
 
                 <br /><br />
-                IIf you have any questions or concerns, please email
+                If you have any questions or concerns, please email
                 <a href="mailto:cuballetensemble@gmail.com"
                   >cuballetensemble@gmail.com</a
                 >. To learn more about CUBE, click here to view our website and
