Fixed alice image issues

--- a/auditions.html
+++ b/auditions.html
@@ -123,13 +123,13 @@
         <div class="row mb-80">
           <div class="col-xl-6 col-md-6">
             <div class="single_project_thumb">
-              <img src="img/auditions/Fall2020-audition.jpg" alt="" />
+              <img src="img/performances/alice2021.JPG" alt="" />
             </div>
           </div>
           <div class="col-xl-5 offset-xl-1 col-md-6">
             <div class="section_title">
               <span class="sub_heading2">Spring 2021</span>
-              <h4>A Midsummer Night’s Dream</h4>
+              <h4>Alice’s Adventures in Wonderland</h4>
               <p>
                 Columbia University Ballet Ensemble (CUBE) will be holding
                 virtual auditions for our Spring 2021 virtual production of
