--- a/performances.html
+++ b/performances.html
@@ -114,7 +114,7 @@
         <div class="row align-items-center">
           <div class="col-xl-6 col-md-6">
             <div class="about_thumb">
-              <img src="img/performances/alice2021.png" alt="" />
+              <img src="img/performances/alice2021.JPG" alt="" />
             </div>
           </div>
           <div class="col-xl-5 offset-xl-1 col-md-6">
@@ -126,11 +126,10 @@
               </div>
               <div>
                 <p>
-                  Sign up
                   <a
-                    href="https://forms.gle/nhUhua3uykzHFHFV7
-"
-                    >here</a
+                    href="https://forms.gle/nhUhua3uykzHFHFV7"
+                    class="boxed-btn"
+                    >Sign Up Here</a
                   >
                 </p>
               </div>
