Removed dancer list

--- a/dancers.html
+++ b/dancers.html
@@ -114,9 +114,11 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-xl-12 col-md-12">
-            <h1>Our Fall 2020 Dancers</h1>
+            <h1>Spring 2021 Dancer List Coming Soon!</h1>
             <div class="seperator"></div>
           </div>
+
+          <!--
 
           <p>
             Faith Ajayi, CC 2021, Environmental Biology<br />
@@ -175,6 +177,7 @@
             (concentration)<br />
             Lea Winter, SEAS 2020 (PhD), Chemical Engineering<br />
           </p>
+          -->
         </div>
       </div>
     </div>
