Updated dancers list

--- a/dancers.html
+++ b/dancers.html
@@ -118,66 +118,57 @@
             <div class="seperator"></div>
           </div>
 
-          <!--
-
           <p>
-            Faith Ajayi, CC 2021, Environmental Biology<br />
-            Ruby Allen, CC 2024, Biochemistry<br />
-            Madeline Angelides, BC 2024, Undecided<br />
-            Li Bing Appel, BC 2024, Undecided<br />
-            Marissa Beatty, GSAS 2022, Chemical Engineering<br />
-            Christine Blackshaw, SEAS 2021, Civil Engineering<br />
-            Kasey Broekema, CC 2021, English<br />
-            Sydney Brown, BC 2024, Computer Science (intended)<br />
-            Emma Chen, BC 2021, Psychology<br />
-            Haley Chung, CC 2023, Film and Human Rights <br />
-            Kaela Cogswell, GS 2021, Postbac Premed<br />
-            Victoria Cunnane, BC 2024, Political Science (intended)<br />
-            Krystle DiCristofalo, CC 2023, Creative Writing<br />
-            Elaine Donderer, CC 2021, Sustainability Management<br />
-            Jenna Everard, BC 2023, Environmental Biology and Computer
-            Science<br />
-            Kathy Fang, CC 2024, Comparative Literature and Society, Drama and
-            Theatre Arts<br />
-            Michael Fass, SEAS 2022, Economics<br />
+            Faith Ajayi, CC 2021, Environmental Biology <br />
+            Mollie Altucher, BC 2024, English (Intended) <br />
+            Emma Anderson , CC 2024, Biology <br />
+            Madeline Angelides, BC 2024, Undecided <br />
+            Li Bing Appel, BC 2024, Undecided <br />
+            Christine Blackshaw, SEAS 2021 , Civil Engineering <br />
+            Abigail Brasch, BC 2024, Undecided <br />
+            Willa Broderick, CC 2024, Sustainable Development Major
+            (Prospective)
+            <br />
+            Sydney Brown, BC 2024, Computer Science <br />
+            Ashley Bruno, GS 2023, Astrophysics <br />
+            Roxane Carre, BC 2023, Undeclared<br />
+            Emma Chen, BC 2021, Psychology <br />
+            Adele Chi, BC 2023, Dance and Psychology <br />
+            Haley Chung, CC 2023, Human Rights and Film Studies <br />
+            Kaela Cogswell, GS 2021, Pre-Med <br />
+            Jenna Everard, BC 2023, Environmental Biology & Computer Science
+            <br />
+            Kathy Fang, CC 2024, Comparative Literature & Society, Theatre
+            <br />
             Michaela Fleischer, BC 2022, English and Dance <br />
-            Rachel Forest, CC 2022, Economics<br />
-            Cassidy Gabriel, CC 2021, Political Science and Computer Science<br />
-            Lizzie Gardner, BC 2022, History and Dance<br />
-            Kayla Glaser, BC 2020, Biochemistry<br />
-            Charlotte Grandon, CC 2024, Linguistics and Cognitive Science <br />
-            Tian Griffin, BC 2021, Neuroscience<br />
-            Ellie Kimura, BC 2024, Neuroscience <br />
-            Hannah Kunze, GS 2022, English<br />
-            Romane Lavandier, BC 2024, Dance and Psychology<br />
-            Lizzy Lin, GSAS 2020, Economics<br />
-            Sarah Liu, CC 2024, Undecided<br />
-            Gloria Lu, BC 2023, Economics<br />
-            Malorie Lundgren, GS 2024, History<br />
+            Charlotte Grandon, CC 2024, Linguistics <br />
+            Tian Griffin, BC 2021, Neuroscience <br />
+            Alexis Ishmael, BC 2024, Undeclared <br />
+            Xiang (Helen) Ji, BC 2022, Biochemistry and Mathematical Sciences
+            (minor)<br />
+            Elizabeth Jones, CC 2024, Undecided <br />
+            Romane Lavandier, BC 2024, Dance <br />
+            Gloria Lu, BC 2023, Economics <br />
             Kiley Malloy, BC 2024, Undecided<br />
-            MJ Markovitz, GS 2023, Political Science <br />
-            Krys McCook, BC 2024, Neuroscience and Behaviour<br />
-            Grace Miner, CC 2021, Human Rights<br />
-            Naomi Namboodiripad, CC 2024, Economics and Film<br />
-            Dale Padelford, SPS 2020, Business (Graduate Foundations Program)<br />
-            Audrey Pettit, BC 2022, English<br />
-            Filip Przybycien, CC 2024, Dance and Film<br />
-            Hannah Richmond, GS 2024, Psychology and Women, Gender, Sexuality
-            Studies<br />
-            Lorelei Robinson, CC 2022, History<br />
-            Pazit Schrecker, BC 2021, Computer Science<br />
-            Lily Selthofner, BC 2024, Dance and Anthropology<br />
-            Rebecca Siegel, BC 2022, English and Neuroscience<br />
-            Amanda Steinborn, GS 2021, Art History<br />
-            Margot Stern, BC 2024, Computer Science<br />
-            Emily Stone, BC 2023, Environmental Science and Human Rights<br />
-            Eva Thomas, BC 2023, Undecided<br />
-            Connie Tran, CC 2024, Economics<br />
-            Camila Vicioso, CC 2023, Psychology (major) and Dance
-            (concentration)<br />
-            Lea Winter, SEAS 2020 (PhD), Chemical Engineering<br />
+            Emily McKiernan, BC 2023, Biology <br />
+            Abby Melbourne, BC 2022, Political Science <br />
+            Grace Miner, CC 2021, Human Rights <br />
+            Naomi Namboodiripad, CC 2024, Economics and Film <br />
+            Indigo Parlin, CC 2024, Computer Science <br />
+            Audrey Pettit, BC 2022, English <br />
+            Filip Przybycien, CC 2024, Dance and Film <br />
+            Hannah Richmond, GS 2024, Gender and Sexuality Studies, Pre Med
+            <br />
+            Pazit Schrecker, BC 2021, Computer Science <br />
+            Kaitlyn Shavelle, CC 2024, Astrophysics <br />
+            Margot Stern, BC 2024, Computer Science <br />
+            Elena Stites, BC 2024, Environment and Sustainability <br />
+            Marcus Tian, CC 2024, Undecided<br />
+            Camila Vicioso, CC 2023, Psychology and Dance (concentration)
+            <br />
+            Lindsey Wales, GS 2021, Computer Science <br />
+            Hannah Yi, BC 2024 , Political Science <br />
           </p>
-          -->
         </div>
       </div>
     </div>
