--- a/board.html
+++ b/board.html
@@ -205,7 +205,7 @@
                 <img src="img/headshots/libing.png" alt="" />
               </div>
               <h3>Li Bing Appel</h3>
-              <p>Assistant PDR Director</p>
+              <p>Assistant Press and Donor Relations Director (PDR)</p>
               <button type="button" class="collapsible">View Bio</button>
               <div class="content">
                 <p>
