--- a/dancers.html
+++ b/dancers.html
@@ -114,7 +114,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-xl-12 col-md-12">
-            <h1>Spring 2021 Dancer List Coming Soon!</h1>
+            <h1>Spring 2021 Dancer List</h1>
             <div class="seperator"></div>
           </div>
 
