removed audition info and added performance info

--- a/auditions.html
+++ b/auditions.html
@@ -53,7 +53,7 @@
                 <div class="main-menu d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a class="active" href="index">Home</a></li>
+                      <li><a href="index">Home</a></li>
                       <li>
                         <a href="#">About Us <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
@@ -63,7 +63,7 @@
                         </ul>
                       </li>
                       <li>
-                        <a href="#">Events<i class="ti-angle-down"></i></a>
+                        <a class="active" href="#">Events<i class="ti-angle-down"></i></a>
                         <ul class="submenu">
                           <li><a href="auditions">Auditions</a></li>
                           <li><a href="performances">Performances</a></li>
@@ -117,15 +117,18 @@
             <div class="section_title mb-60">
               <span class="sub_heading">Upcoming Auditions</span>
               <div class="seperator"></div>
+              <p class="section_title">There are no auditions at this time, please check again at the start of the Fall 2021 semester.</p>
             </div>
           </div>
         </div>
+        <!--
         <div class="row mb-80">
           <div class="col-xl-6 col-md-6">
             <div class="single_project_thumb">
               <img src="img/performances/alice2021.JPG" alt="" />
             </div>
           </div>
+          
           <div class="col-xl-5 offset-xl-1 col-md-6">
             <div class="section_title">
               <span class="sub_heading2">Spring 2021</span>
@@ -139,7 +142,6 @@
                 affiliates. Audition instructions are below. Everyone who
                 auditions will be cast. Casting will be announced within a few
                 days of the virtual audition class.
-
                 <br /><br />
                 Without access to studio space, we have adapted this virtual
                 production to be performed outdoors in sneakers or flat shoes.
@@ -213,6 +215,7 @@
             </div>
           </div>
         </div>
+        -->
       </div>
     </div>
     <!-- lastest_project_end -->
