--- a/performances.html
+++ b/performances.html
@@ -53,7 +53,7 @@
                 <div class="main-menu d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a class="active" href="index">Home</a></li>
+                      <li><a href="index">Home</a></li>
                       <li>
                         <a href="#">About Us <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
@@ -63,7 +63,7 @@
                         </ul>
                       </li>
                       <li>
-                        <a href="#">Events<i class="ti-angle-down"></i></a>
+                        <a class="active" href="#">Events<i class="ti-angle-down"></i></a>
                         <ul class="submenu">
                           <li><a href="auditions">Auditions</a></li>
                           <li><a href="performances">Performances</a></li>
@@ -114,7 +114,7 @@
         <div class="row align-items-center">
           <div class="col-xl-6 col-md-6">
             <div class="about_thumb">
-              <img src="img/performances/alice2021.JPG" alt="" />
+              <img src="img/performances/alice2021Official.JPG" alt="" />
             </div>
           </div>
           <div class="col-xl-5 offset-xl-1 col-md-6">
@@ -124,6 +124,7 @@
                 <h3>Alice’s Adventures in Wonderland</h3>
                 <div class="seperator"></div>
               </div>
+              <!--
               <div>
                 <p>
                   <a
@@ -133,47 +134,45 @@
                   >
                 </p>
               </div>
-              <!--
+              -->
               <div>
                 <p>
-                  Columbia University Ballet Ensemble (CUBE) is pleased to
-                  present our first ever virtual production of A Midsummer
-                  Night's Dream! For Fall 2020, Columbia University dancers
-                  scattered across the world have come together to participate
-                  in this virtual performance, rehearsing and filming this
-                  classic Shakespearean ballet accompanied by a mischievous
-                  Felix Mendelssohn score.
+                  Fall down the rabbit hole with Columbia University Ballet 
+                  Ensemble's whimsical virtual production of Alice's Adventures 
+                  in Wonderland! For Spring 2021, Columbia University dancers 
+                  scattered across the world have come together to participate in 
+                  this organization's second-ever virtual performance, rehearsing 
+                  and filming this classic Lewis Carroll tale to a whimsical Jody 
+                  Talbot score.
                 </p>
 
                 <p>
-                  The performance will occur on Saturday, December 5th at 8pm
-                  EDT via Zoom. Tickets are $3 for BC/CU ID Admission and $5 for
-                  General Admission.
-                </p>
-                <p>
-                  Please note: For security reasons, we ask that an individual
-                  ticket be purchased for each viewer and audience members
-                  refrain from sharing the Zoom link.
+                  The performance will occur on Saturday, May 22nd at 8pm EDT via 
+                  Zoom. The performance is approximately 90 minutes long with a 10 
+                  minute intermission. Admission is free. However, donations of $3 
+                  BC/CU ID, $5 general admission, or $25 for groups of 4 or more are 
+                  highly recommended and appreciated. To donate and reserve your 
+                  tickets, click “Reserve Tickets.”
                 </p>
               </div>
               <div>
                 <p>
-                  Ticket Link:
+                  Reserve Tickets:
                   <a
-                    href="https://www.eventbrite.com/e/a-midsummer-nights-dream-virtual-production-tickets-128297502283"
+                    href="https://www.eventbrite.com/e/alices-adventures-in-wonderland-a-full-length-virtual-ballet-tickets-152756285161"
                   >
-                    https://www.eventbrite.com/e/a-midsummer-nights-dream-virtual-production-tickets-128297502283
+                    https://www.eventbrite.com/e/alices-adventures-in-wonderland-a-full-length-virtual-ballet-tickets-152756285161
                   </a>
                 </p>
               </div>
               <div class="mission_contact">
                 <a
-                  href="https://youtu.be/cHvrA4DTrQc"
+                  href="https://www.youtube.com/watch?v=eDG_d9kIovY"
                   class="boxed-btn large-width"
                   >Promo Video</a
                 >
               </div>
-              -->
+              
             </div>
           </div>
         </div>
