updated active flag on buttons

--- a/outreach.html
+++ b/outreach.html
@@ -52,7 +52,7 @@
                 <div class="main-menu d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a class="active" href="index">Home</a></li>
+                      <li><a href="index">Home</a></li>
                       <li>
                         <a href="#">About Us <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
@@ -62,7 +62,7 @@
                         </ul>
                       </li>
                       <li>
-                        <a href="#">Events<i class="ti-angle-down"></i></a>
+                        <a class="active" href="#">Events<i class="ti-angle-down"></i></a>
                         <ul class="submenu">
                           <li><a href="auditions">Auditions</a></li>
                           <li><a href="performances">Performances</a></li>
