--- a/about.html
+++ b/about.html
@@ -53,9 +53,9 @@
                 <div class="main-menu d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a class="active" href="index">Home</a></li>
+                      <li><a href="index">Home</a></li>
                       <li>
-                        <a href="#">About Us <i class="ti-angle-down"></i></a>
+                        <a class="active" href="#">About Us <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
                           <li><a href="about">Mission and History</a></li>
                           <li><a href="board">Our Board</a></li>
