--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                 <div class="main-menu d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a class="active" href="index">Home</a></li>
+                      <li><a href="index">Home</a></li>
                       <li>
                         <a href="#">About Us <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
@@ -71,7 +71,7 @@
                           <li><a href="outreach">Outreach Program</a></li>
                         </ul>
                       </li>
-                      <li><a href="contact">Contact</a></li>
+                      <li><a class="active" href="contact">Contact</a></li>
                     </ul>
                   </nav>
                 </div>
