--- a/donate.html
+++ b/donate.html
@@ -53,7 +53,7 @@
                 <div class="main-menu d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a class="active" href="index">Home</a></li>
+                      <li><a href="index">Home</a></li>
                       <li>
                         <a href="#">About Us <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
